add media query for user stories

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -73,3 +73,9 @@ body {
     grid-area: projects;
     background: #0c6b12;
 }
+
+@media screen and (max-width: 768px) {
+    #navbar {
+        justify-content: center;
+    }
+}
