--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -32,7 +32,7 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    background: #0c6b12;
+    background: #00e000;
     z-index: 10;
 }
 
@@ -56,7 +56,7 @@ body {
 
 .nav-list a {
     text-decoration: none;
-    color: #000;
+    color: #e00070;
     font-size: 1.5em;
 }
 
@@ -98,6 +98,7 @@ body {
     justify-self: center;
     display: flex;
     width: 100%;
+    max-width: 980px;
     justify-content: space-evenly;
 }
 
