--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -32,6 +32,7 @@ body {
     top: 0;
     left: 0;
     width: 100%;
+    min-height: 50px;
     background: #00e000;
     z-index: 10;
 }
@@ -43,11 +44,12 @@ body {
     padding: 0;
     margin-right: 2rem;
     justify-content: space-evenly;
+    align-self: center;
 }
 
 #navbar li {
     display: inline;
-    margin-right: 10px;
+    margin-right: 20px;
 }
 
 .nav-list li:last-child {
@@ -57,7 +59,7 @@ body {
 .nav-list a {
     text-decoration: none;
     color: #e00070;
-    font-size: 1.5em;
+    font-size: 2em;
 }
 
 #navbar ul a:hover {
