update link styling in projects section

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -140,6 +140,7 @@ body {
     color: #e00070;
     font-size: 1.5em;
     justify-self: center;
+    text-decoration: none;
 }
 
 .code {
@@ -147,6 +148,7 @@ body {
     color: #e00070;
     font-size: 1.5em;
     justify-self: center;
+    text-decoration: none;
 }
 
 
