--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,5 @@
-*,
-*::before,
-*::after {
-    box-sizing: inherit;
+* {
+    box-sizing: border-box;
 }
 
 body {
@@ -35,6 +33,7 @@ body {
     min-height: 50px;
     background: #ffffff;
     z-index: 10;
+    box-shadow: 0px 3px black;
 }
 
 .nav-list {
@@ -58,13 +57,13 @@ body {
 
 .nav-list a {
     text-decoration: none;
-    color: #e00070;
+    color: #e00000;
     font-size: 2em;
 }
 
 #navbar ul a:hover {
     text-decoration: underline;
-    text-decoration-color: #e00070;
+    text-decoration-color: #e00000;
 }
 
 /* Welcome Section */
