--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -63,4 +63,52 @@
         text-decoration: underline;
         text-decoration-color: #e00000;
     }
+
+    /* Welcome Section */
+
+    #welcome-section {
+        grid-area: welcome;
+        display: grid;
+        grid-template-columns: 100%;
+        grid-template-rows: .5fr auto .5fr;
+        width: 100%;
+        height: 100vh;
+        background: #e00000;
+    }
+
+    #welcome-section h1 {
+        align-self: end;
+        justify-self: center;
+        font-size: 3em;
+        text-align: center;
+        color: #ffffff;
+        margin-bottom: 5px;
+    }
+
+    #welcome-section p {
+        align-self: start;
+        justify-self: center;
+        font-size: 1.5em;
+        font-style: italic;
+        margin-top: 0px;
+        color: #ffffff;
+    }
+
+    #welcome-section div {
+        align-self: start;
+        justify-self: center;
+        display: flex;
+        width: 100%;
+        justify-content: space-evenly;
+    }
+
+    .social a {
+        font-size: 1.5em;
+        text-decoration: none;
+        color:#ffffff;
+    }
+    
+    .social a:hover {
+        transform: translateX(10px);
+    }
 }
