create footer section

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -158,6 +158,18 @@ body {
     height: 2rem;
 }
 
+/* Footer */
+
+#footer {
+    grid-area: footer;
+    background-color: #e00000;
+}
+
+#footer p {
+    font-size: 1rem;
+    color: #ffffff;
+    text-align: center;
+}
 
 @media screen and (max-width: 768px) {
     #navbar {
